--- a/_posts/2022-11-29-PQ-cedaw第4次國家報告國際審查-陳菊-2020年國會女性議員占比達41.59.html
+++ b/_posts/2022-11-29-PQ-cedaw第4次國家報告國際審查-陳菊-2020年國會女性議員占比達41.59.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7-1024x473.png" alt="" class="wp-image-121588" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>　臺灣於 2011 年即制定公布「消除對婦女一切形式歧視公約（CEDAW）施行法」，迄今已提出 4 次國家報告／圖：行政院提供。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7-1024x473.png" alt="" class="wp-image-121588" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7-1024x473.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7-300x138.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7-768x354.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7-1536x709.png 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/1ec07597-未命名設計-7.png 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>　臺灣於 2011 年即制定公布「消除對婦女一切形式歧視公約（CEDAW）施行法」，迄今已提出 4 次國家報告／圖：行政院提供。</figcaption></figure></div>
 
 
 
