--- a/_posts/2022-11-30-PQ-僅索羅門派高層出席中國會議-紐澳中太平洋地區影響力攻防.html
+++ b/_posts/2022-11-30-PQ-僅索羅門派高層出席中國會議-紐澳中太平洋地區影響力攻防.html
@@ -8,7 +8,7 @@ tags: blog
 author: 蔡侯塞
 ---
 
-<p>紐西蘭 11 月 23 日表示，將再投資 1,000 萬紐幣（615 萬美元）幫助萬那杜建碼頭，幾年前有媒體報導中國計畫資助萬那杜蓋大型軍用碼頭，又再度引起對中國在太平洋島國試圖建立軍事基地的擔憂。與此同時，中國公安部長王小洪跟六個太平洋國家的高階警官和外交官舉行網路會議，這被視為是中國展現深化太平洋國家地區軍警部門關係的決心。</p>
+<p>紐西蘭 11 月 23 日宣布，將再投資 1,000 萬紐幣（615 萬美元）幫助萬那杜興建碼頭，幾年前有媒體報導中國計畫資助萬那杜蓋大型軍用碼頭，又再度引起對中國在太平洋島國試圖建立軍事基地的擔憂。與此同時，中國公安部長王小洪跟六個太平洋國家的高階警官和外交官舉行網路會議，這被視為是中國展現深化太平洋國家地區軍警部門關係的決心。</p>
 
 
 
@@ -28,7 +28,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/c120d334-fikgwp-uuaar5cs-1024x433.jpg" alt="" class="wp-image-121638" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/c120d334-fikgwp-uuaar5cs-1024x433.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/c120d334-fikgwp-uuaar5cs-300x127.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/c120d334-fikgwp-uuaar5cs-768x324.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/c120d334-fikgwp-uuaar5cs.jpg 1366w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國與數個太平洋島國共同舉辦首屆警務能力建設與合作部長級對話（Ministerial Dialogue on Police Capacity Building and Cooperation），然而即使是視訊會議，參與的各國代表並非都是「部長級」，顯見並沒有得到重視<br>圖／Chinese Embassy in Fiji
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/c120d334-fikgwp-uuaar5cs-1024x433.jpg" alt="" class="wp-image-121638" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/11/c120d334-fikgwp-uuaar5cs-1024x433.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/c120d334-fikgwp-uuaar5cs-300x127.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/c120d334-fikgwp-uuaar5cs-768x324.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/11/c120d334-fikgwp-uuaar5cs.jpg 1366w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國與數個太平洋島國共同舉辦首屆警務能力建設與合作部長級對話（Ministerial Dialogue on Police Capacity Building and Cooperation），然而即使是視訊會議，參與的各國代表並非都是「部長級」，顯見並沒有得到重視<br>圖／Chinese Embassy in Fiji
 @ChineseEmb_FJ</figcaption></figure></div>
 
 
