--- a/_posts/2022-11-29-INITIUM-现场-北京亮马河-此刻-我们在这里就是意义.html
+++ b/_posts/2022-11-29-INITIUM-现场-北京亮马河-此刻-我们在这里就是意义.html
@@ -63,7 +63,7 @@ author: 端传媒中国组
 <p>但这并不是常态，凌晨1点左右。有一名女生被警方带走，据在场的媒体朋友说，在新源里，前后大概有3个人被带走。警察也没有透露任何原因，截至目前，也没有收到任何消息。</p>
 <p>这是宿明第一次在国内见到这样的场景。压抑已久的人们聚齐，尽管大家都有各自不同的立场。可在当下，就像人群中那句话，“此刻，我们在这里就是意义。”</p>
 <p>有几个瞬间，让宿明印象深刻。</p>
-<p>在大厦对面的小区，有不少本地居民。一位阿姨带着印有国旗的口罩从小区里走了出来。见到此景，她说，“还是年轻人厉害，世界是他们的。”</p>
+<p>在大厦对面的小区，有不少本地居民。一位阿姨戴着印有国旗的口罩从小区里走了出来。见到此景，她说，“还是年轻人厉害，世界是他们的。”</p>
 <p>宿明还看到，在警察人墙散开之后，有陌生人因为这场“抗议”而渐渐生出了感情，他们相互留下联系方式。</p>
 <p>还有人目睹了抓人的过程，哭着喊着，“有本事去抓核酸机构，抓我们老百姓干嘛。”</p>
 <p>零点40分左右，几辆大巴车开来，宿明收到了来自朋友的消息，说现场有可能要放瓦斯，提醒她注意安全。</p>
