--- a/_posts/2022-11-30-INMEDIA-新華社-江澤民上海病逝-終年96歲.html
+++ b/_posts/2022-11-30-INMEDIA-新華社-江澤民上海病逝-終年96歲.html
@@ -8,8 +8,12 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20221130k.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>新華社報道，前國家主席江澤民逝世，終年96歲。新華社指江澤民因白血病及多重器官衰竭，搶救無效，中午 12時13分在上海病逝。江澤民的死訊，在央視新聞有公布。</p>
-<p>央視新聞公布江澤民同志治喪委員會名單，包括國家主席、中共總書記習近平，亦包括多名前任及現任中共政治局常委，例如李克強、栗戰書、汪洋、李強、趙樂際、王滬寧、韓正等。</p>
-<p>江澤民最後一次公開亮相是2019年國慶70年慶典，與胡錦濤一同現身主席台。江澤民於今年10月16日舉行的中共二十大會議中，也沒有露面。但在二十大舉行前夕，網上有傳江澤民的生日照，背景是來自習近平及總理李克強的祝籌花藍。</p>
+<img src="https://www.inmediahk.net/files/column_images/20221130k.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>新華社報道，前國家主席江澤民逝世，終年96歲。新華社指江澤民因白血病及多重器官衰竭，搶救無效，中午12時13分在上海病逝。江澤民的死訊，在央視新聞有公布。</p>
+<p>央視新聞公布江澤民同志治喪委員會名單，主任委員為國家主席、中共總書記習近平，另包括多名前任及現任中共政治局常委，例如李克強、栗戰書、汪洋、李強、趙樂際、王滬寧、韓正等，全國政協副主席、前行政長官董建華及梁振英亦在名單之中。</p>
+<p>江澤民治喪委員會發出公告，表示於江澤民追悼大會舉行日前，北京天安門、新華門、人民大會堂、外交部和香港中聯辦、澳門中聯辦、中國駐外使領館將下半旗誌哀。期間香港中聯辦、澳門中聯辦、中國駐外使領館將設靈堂，接待港澳地區和駐在國弔唁。另外，按照中方慣例，不邀請外國政府、政黨和友好人士派代表團或代表到華參加悼念活動。</p>
+<p>江澤民於80年代改革開放初期，逐漸踏上政治舞台，先後出任上海市市長、上海市委副書記及書記。在1989年六四事件後，江澤民代替趙紫陽擔任總書記，數月後再接替鄧小平任中共中央軍委主席。至1993年3月，出任國家主席，正式成為第三代領導集體的核心。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Y2966c2L37" title="榬F긩x됰ꮡ儮u缭ᡝ䀡^  CE meets with President Jiang (1)"><img src="https://live.staticflickr.com/65535/52533605315_db8753af93_b.jpg" alt="榬F긩x됰ꮡ儮u缭ᡝ䀡^  CE meets with President Jiang (1)" /></a></p>
+<p>江澤民於1997年曾來港，出席香港回歸交接儀式。他之後於2000年來港時不滿被記者問及是否欽點董建華兩年後連任行政長官，訓斥記者「too simple, sometimes naive」。</p>
+<p>江澤民最後一次公開亮相是2019年國慶70年慶典，與胡錦濤一同現身主席台。江澤民於今年10月16日舉行的中共二十大會議中，也沒有露面。但在二十大舉行前夕，網上有傳江澤民的生日照，背景是來自習近平及總理李克強的祝壽花藍。</p>
 <p>2011年7月6日，亞視新聞搶先獨家報導江澤民病逝，稱死亡原因是肝腫瘤。不過新華社翌日發出中英文稿，引述權威消息指傳媒報導純屬謠言。</p>
 </div></div></div>
