Update VOCUS 2022-12-01 patch

--- a/_posts/2022-11-30-VOCUS-百事可樂-說好的戰鬥機呢-活動出包如何救.html
+++ b/_posts/2022-11-30-VOCUS-百事可樂-說好的戰鬥機呢-活動出包如何救.html
@@ -53,4 +53,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">簡單的敘述引起軒然大波的這起事件，背後正是自以為是的高層不尊重專業的關係，一而再非專業的意見和廣告修改，導致廣告呈現不僅違背設計者的意願，也讓活動開了大洞讓約翰可以獲取集點百萬的靈感。</div>
 <div class="draft-block draft--p left">我會覺得《百事可樂，說好的戰鬥機呢？》紀錄片中的活動事件的一切該承擔責任的不是廣告設計方、或是集齊七百萬點的約翰倫納德，或是百事基層策畫人員，而是那些審核的高官與主管，他們其實在廣告推出時有多次機會可以防止事件發生，並且停止他們為參與而參與的無用言論，但最終卻還是引發一起炎上事端。</div>
 <div class="draft-block draft--p left">最終我想每個觀眾還是想跟百事可樂官方說一句：「那個，說好的戰鬥機呢？」</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/lzS8BQBcAu4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/lzS8BQBcAu4"></iframe></div>
