--- a/_posts/2022-12-01-PQ-台積電亞利桑那廠6日首批機台到廠-美總統拜登親臨同慶.html
+++ b/_posts/2022-12-01-PQ-台積電亞利桑那廠6日首批機台到廠-美總統拜登親臨同慶.html
@@ -20,7 +20,7 @@ author: 陸 瑪丁
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2020/11/f1721e60-張忠謀代表／總統府.png" alt="" class="wp-image-44936" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/11/f1721e60-張忠謀代表／總統府.png 735w, https://storage.googleapis.com/stateless-34-84-11-249/2020/11/f1721e60-張忠謀代表／總統府-300x201.png 300w" sizes="(max-width: 555px) 100vw, 555px" /><figcaption>拜登下周訪問台積電亞利桑那廠區，創辦人張忠謀將一同出席。<br>（圖／總統府資料畫面）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2020/11/f1721e60-張忠謀代表／總統府.png" alt="" class="wp-image-44936" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/11/f1721e60-張忠謀代表／總統府.png 735w, https://storage.googleapis.com/stateless-34-84-11-249/2020/11/f1721e60-張忠謀代表／總統府-300x201.png 300w" sizes="(max-width: 555px) 100vw, 555px" /><figcaption>拜登下周訪問台積電亞利桑那廠區，創辦人張忠謀將一同出席。<br>（圖／總統府資料畫面）</figcaption></figure></div>
 
 
 
