--- a/_posts/2022-12-01-INITIUM-现场-从广州人民桥到海珠广场-提前部署的警力-对骂声与被围困的示威者.html
+++ b/_posts/2022-12-01-INITIUM-现场-从广州人民桥到海珠广场-提前部署的警力-对骂声与被围困的示威者.html
@@ -8,8 +8,8 @@ tags: blog
 author: 端传媒中国组 特约撰稿人 Lesley Fung 发自新加坡
 ---
 
-<p>「「站出来的时候，变革就已经在发生了。」」</p><p>端传媒中国组 特约撰稿人 Lesley Fung 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/d7622a68168040f5803bdbecda05240e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。<span class="credit">摄影：伯谋</span></figcaption></figure><p>“今天晚上不要在这里了，不让在这里集结。”</p>
+<p>「「站出来的时候，变革就已经在发生了。」」</p><p>端传媒中国组 特约撰稿人 Lesley Fung 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/d7622a68168040f5803bdbecda05240e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。<span class="credit">摄影：伯谋</span></figcaption></figure><p>“今天晚上不要在这里了，不让在这里集结。”</p>
 <p>“可是我们就两三个人诶，我们就是过来玩的。”</p>
 <p>“不要跟我说这些，现在这里临时管控。”</p>
 <p>“管控？有文件吗？”</p>
@@ -18,21 +18,21 @@ author: 端传媒中国组 特约撰稿人 Lesley Fung 发自新加坡
 <p>当晚，广州与北京、上海、成都等多个城市，同时发生对防疫封控的群体抗议行动，以年轻人为主的市民们走上城市的街头，喊口号，唱歌，举起白纸与悼念乌鲁木齐惨剧的鲜花，这不仅是他们很多人生命历程中的第一次街头经历，也是中国大陆高压政治环境中，数十年少有的抗争场景。</p>
 <p>参与其中的人，或许诉求与站出来的原因不尽相同，但抗议愈发荒谬甚至不断造出人祸的防疫封控政策，是“最大公约数”。11月30日，含广州在内，多个城市放松防控，分管防疫的中国国务院副总理孙春兰，也首次在座谈会中提及防疫面临“新形势新任务”。</p>
 <p>这似乎是抗议带来的些许回音，但警方的盘查与骚扰也接踵而至，宝荣的朋友就曾被警方以防疫调查为名，在清晨重重敲响房门。而与此同时，那些夜晚的共同经历，也在每个参与者心里种下了不同的种子。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/01dcd8231a2947909a8ff5a4a61ea7b3.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 <span class="credit">摄影：伯谋</span></figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/01dcd8231a2947909a8ff5a4a61ea7b3.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 <span class="credit">摄影：伯谋</span></figcaption></figure>
 
 <h2>周旋</h2>
 <p>广州的示威从一开始，就注定伴随着与警方的斡旋与缠斗。</p>
 <p>11月27日下午，宝荣看到社交媒体中流传着一张海报，约定晚8时在广州人民桥底共同纪念因过度防疫而死去的同胞。前一日，上海乌鲁木齐中路的抗议与南京传媒学院等高校学生的白纸抗议，在中国大陆社交媒体的重重审查中仍被不断传播。27日当天，除广州外，北京、成都等其他城市也发出相应号召。“要跟大家站在一起”的念头下，宝荣没有多想，就叫了朋友一同前往。</p>
 <p>然而，当他抵达人民桥底时，已有大量警力部署在周边。宝荣与朋友只好一圈圈地在附近游荡。</p>
 <p>八点半左右，人民桥底部署的警察越来越多，他们甚至开始随机翻路人的包，几乎每20米就有两位警察，安静的街道上没有任何示威的痕迹，只有一些如宝荣一样不愿离开、四处走动的“路人”，与越来越多的警察和警车。</p>
-<p>“当时还在封控，没什么人，但很多电动车就停在那里不动，好像在寻找什么，还有很多行人，从他们寻找的眼神里，能看得出来其实是同路人。”林乐回忆，他也是当时在现场走动的人之一。不久，一些路过的朋友开始小声提醒：你们快走，这边要抓人了。于是宝荣、林乐等人便动身到海珠广场，去参与十点半的活动。</p>
+<p>“当时还在封控，人不多，但有一些行人，从他们寻找的眼神里，能看得出来其实是同路人。”林乐回忆，他也是当时在现场走动的人之一。不久，一些路过的朋友开始小声提醒：你们快走，这边要抓人了。于是宝荣、林乐等人便动身到海珠广场，去参与十点半的活动。</p>
 <p>原定地点是海珠广场标志性的雕像前，然而那里同样布满了警察。据宝荣回忆，当时广场上有近五十位警察，他与朋友站在雕像下聊天，试图等待更多人加入。警察留意到他们的停留，便不断要求他们离开，于是就有了本文开头的对话。</p>
 <p>紧接着，宝荣手机上开始不断收到 Airdrop 传来的一些图片，有的是传播地点时间信息，有的是提醒注意安全。约十点多，两三位年轻人走到宝荣身边低声问：“你们是吗？”</p>
 <p>“是。”</p>
 <p>“可以跟我走，在小花园里。”</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/4492b10756b642e5a1acbb7e6595360c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 <span class="credit">摄影：伯谋</span></figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/4492b10756b642e5a1acbb7e6595360c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 <span class="credit">摄影：伯谋</span></figcaption></figure>
 
 <h2>“不要围观要加入！”</h2>
 <p>约10点半，悼念活动在海珠广场的小公园深处开始。有人打开蓝牙音箱，在现场放起了音乐。第一首是叶倩文的《秋来秋去》。</p>
@@ -44,8 +44,8 @@ author: 端传媒中国组 特约撰稿人 Lesley Fung 发自新加坡
 <p>除口号外，示威者们与北京、上海等地一样合唱起《Do you hear the people sing》、《国际歌》等，而Beyond乐队的《海阔天空》、《光辉岁月》更合唱了不止一遍，宝荣还听到身旁有人用手机播放了谢安琪的《家明》。</p>
 <p>唱累了、喊累了，一些示威者开始尝试与围堵在面前的警察沟通。有人用普通话问：“你们是谁的父亲，又是谁的儿子？你们最开始考入警校，就是为了站在这里封住你们所服务的人民吗？”有人用粤语苦口婆心：“三年啦，过够啦，饭都冇的食，你哋都系人，都知而家工好难揾，你哋咁样，翻屋企瞓唔瞓得着啊？”（注：三年了，过够了，饭都没得吃，你们也是人，也知道现在工作不好做啊，你们这样，回家睡不睡得着啊？）</p>
 <p>没有人给出回应。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/9c7a0423f72249bfa00c9c1590113a21.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 <span class="credit">摄影：伯谋</span></figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/9c7a0423f72249bfa00c9c1590113a21.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 <span class="credit">摄影：伯谋</span></figcaption></figure>
 
 <h2>核心示威者之外：对骂声、便衣与污名</h2>
 <p>“废青返屋企！（注：废青回家！）”围观者中，有人喊到。</p>
@@ -57,8 +57,8 @@ author: 端传媒中国组 特约撰稿人 Lesley Fung 发自新加坡
 <p>同样身在核心示威者人群中的阿伟，也听到了“返屋企”等声音，身边一些广东人还回呛：“要返自己返啦！”由于有一定距离，他无法分辨“返屋企”等嘘声的来源，“我不确定是故意捣乱的便衣，还是外面的围观者。”</p>
 <p>阿伟是从周围的人群渐渐走入示威核心区的，他此前在警戒线外发现现场除警察外，还有很多易于辨认的便衣警察，他们往往都是一些精壮的中年男人，黑色衣服和鞋子，戴着N95口罩，会拿着手机靠近示威者的脸进行拍摄。</p>
 <p>“但如果是故意捣乱的，广州疫情期间本地外地矛盾，的确是一个容易被挑起矛头的焦点。”阿伟补充。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/265210cdd0b74be7ac06918db6512be9.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 <span class="credit">摄影：伯谋</span></figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/265210cdd0b74be7ac06918db6512be9.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 <span class="credit">摄影：伯谋</span></figcaption></figure>
 
 <h2>“一起走！”</h2>
 <p>晚上11时30分至12时之间，警察组成人墙将核心圈内的人围了起来了，看着警察渐渐逼近和围困的行动，站在外圈的声援者开始喊：“放人！”</p>
@@ -70,8 +70,8 @@ author: 端传媒中国组 特约撰稿人 Lesley Fung 发自新加坡
 <p>1点左右，双方达成“白纸不再举着、离开后不再聚集”的协定，阿伟、宝荣等在海珠广场被围困的示威者安全离开。离开时，宝荣给此前在人民桥偶遇的陌生朋友发信息报平安，并询问他们在哪里、是否安全，很可惜，他们因落单被带入警察局做笔录。</p>
 <p>宝荣问，需要帮忙吗？</p>
 <p>朋友说，没事啦，就是头发被揪掉很多。</p>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/9e7880825cb8455898460a8b7e0ad591.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年11月27日晚上，广州海珠区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 <span class="credit">摄影：伯谋</span></figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221202-mainland-guangzhou-zero-covid-protests/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/9e7880825cb8455898460a8b7e0ad591.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2022年11月27日晚上，广州越秀区有市民聚集，手持白纸表达对乌鲁木齐火灾的哀悼和对防疫防控措施的抗议。 <span class="credit">摄影：伯谋</span></figcaption></figure>
 
 <h2>种子</h2>
 <p>“有开酒吧的大哥说，以后去他酒吧随便喝，但我不记得名字了......还有一个女孩生日，我们很多人给她唱生日歌。”距离11月27日已过去3日，宝荣回忆起那时的心境和偶遇，仍然有鲜活的温馨感。</p>
