--- a/_posts/2022-12-02-PQ-2,000個裝韓劇電影的隨身碟流入北韓-脫北者給北韓人的-現代瓶中信.html
+++ b/_posts/2022-12-02-PQ-2,000個裝韓劇電影的隨身碟流入北韓-脫北者給北韓人的-現代瓶中信.html
@@ -17,7 +17,7 @@ author: 林貝利
 
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="Flash Drives For Freedom" src="https://www.youtube.com/embed/zj-NthvP94k?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe loading="lazy" title="Flash Drives For Freedom" src="https://www.youtube.com/embed/zj-NthvP94k?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div><figcaption>自由隨身碟的宣傳影片。</figcaption></figure>
 
 
