--- a/_posts/2022-12-02-INITIUM-当白纸穿透中国大学高墙-站出来-看到了集体行动的可能.html
+++ b/_posts/2022-12-02-INITIUM-当白纸穿透中国大学高墙-站出来-看到了集体行动的可能.html
@@ -10,7 +10,8 @@ author: 端传媒中国组
 
 <p>「“大家不是因为都支持什么而走出来，而是反对什么聚在一起。至于要改变成什么样子，更是千差万别。”」</p><p>端传媒中国组</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221203-mainland-students-covid-policy-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/b8088bbc526b4a8aa9a26797f380d62f.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日中午，清华大园数百名学生加入最近的抗议潮，现场齐声高呼“民主法治、表达自由”。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年11月27日中午，清华大园数百名学生加入最近的抗议潮，现场齐声高呼“民主法治、表达自由”。<span class="credit">网上图片  </span></figcaption></figure><p><small>【编者按】封控抗议潮争取回了最基本的“自由”。11月30日起，广州、重庆、北京陆续宣布放宽封控措施：解封临时管控区，取消社会面核酸检测，公交、公共场所不再查验核酸证明，医疗机构不得拒诊无核酸患者，购买感冒发烧药品也不再受限；而抗议的起点乌鲁木齐也正逐渐恢复正常生活秩序。</small></p>
-<p><small>此时解封的城市，均为入冬后中国大陆疫情最严重的地区。它们的解封预示着中国大陆防疫政策的清晰转调。另据《南华早报》报道，习近平在与欧洲理事会主席会谈时暗示，将进一步放宽防疫措施，并表示Omicron致病性降低，但仍担心老年群体的疫苗接种率。 </small></p>
+<p><small>此时解封的城市，均为入冬后中国大陆疫情最严重的地区。它们的解封预示着中国大陆防疫政策的清晰转调。另据《南华早报》报道，习近平在与欧洲理事会主席会谈时
+表示，抗议封控措施的主流是学生，他们在三年抗疫后感到“沮丧”。习近平还暗示，将进一步放宽防疫措施，并称Omicron致病性降低，但仍担心老年群体的疫苗接种率。 </small></p>
 <p>一张白纸引燃了中国大学对封控政策的示威潮。</p>
 <p>11月26日下午，天色些许阴沉。南京传媒学院钟楼前，身穿黑色衣帽的女生正默站，她手持一张A4白纸，举在胸前，注视前方，独自悼念乌鲁木齐火灾逝者。一位配戴眼镜的男子径直朝她走去，拿走白纸，转身离开。不远处的同学向他喊道，“白纸有什么攻击力啊。”失去白纸后，女生面不改色，双手悬在空中。</p>
 <p>后来，白纸重新出现在她手中，身旁聚集了更多白纸。数位同学加入静默示威，同学们手举白纸直至黑夜降临。他们从空地上转移至钟楼台阶上，层层人群在台阶下围成半个弧形。现场布满手机灯光。光点环绕着白纸，他们大喊，“人民万岁，逝者安息。”</p>
@@ -23,7 +24,7 @@ author: 端传媒中国组
 
 <h2>第一把火</h2>
 <p>11月25日，一篇讽刺乌鲁木齐官方通报的微信文章《路是通的，他们不跑》在小北朋友圈刷屏。原文很快被删除，其他帐号接力转载，都难遭删帖命运。这天，涉及乌鲁木齐火灾的其他文章、视频，无一不在短时间内被消失。</p>
-<p>小北是南京传媒大学（下称南传）的学生。这天，他明显感觉到，身边的同学都被乌鲁木齐火灾激怒了。</p>
+<p>小北是南京传媒学院（下称南传）的学生。这天，他明显感觉到，身边的同学都被乌鲁木齐火灾激怒了。</p>
 <p>26日中午小北看到，同学制作了抗议纸板，写着“我摔断了腿，医生连忙跑来缝我的嘴”“奠 中国电影”“在口口，是我们电影人的福地”“这十年是我们口口电影的好时代”（注：口口指中国）⋯⋯标语摆在校内不同地方，有的贴在树上。但很快被保安清除。</p>
 <p>“这些东西制作出来， 还没有（被保安）没收来得快。所以干脆就不写字了，就举着白纸了。”小北总结。</p>
 <p>晚上六时，他来到钟楼静默示威的现场，围观人数已有上百。不到一个小时，钟楼前人潮涌动。</p>
