--- a/_posts/2022-12-02-PQ-美國防部發表中國軍力報告-警告2027年共軍恐具武統能力.html
+++ b/_posts/2022-12-02-PQ-美國防部發表中國軍力報告-警告2027年共軍恐具武統能力.html
@@ -24,7 +24,7 @@ author: 謝時
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/b37273e4-221122-d-tt977-0085-1024x683.jpg" alt="" class="wp-image-121810" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/b37273e4-221122-d-tt977-0085-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/b37273e4-221122-d-tt977-0085-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/b37273e4-221122-d-tt977-0085-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/b37273e4-221122-d-tt977-0085.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國國防部長奧斯汀與中國國防部長魏鳳和2022年11月22日在柬埔寨東協峰會上會面<br>圖／Chad J. McNeeley, DOD</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/b37273e4-221122-d-tt977-0085-1024x683.jpg" alt="" class="wp-image-121810" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/b37273e4-221122-d-tt977-0085-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/b37273e4-221122-d-tt977-0085-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/b37273e4-221122-d-tt977-0085-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/b37273e4-221122-d-tt977-0085.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國國防部長奧斯汀與中國國防部長魏鳳和2022年11月22日在柬埔寨東協峰會上會面<br>圖／Chad J. McNeeley, DOD</figcaption></figure></div>
 
 
 
