--- a/_posts/2022-12-02-INMEDIA-紀錄片-野草不盡-說創傷與移民的香港故事.html
+++ b/_posts/2022-12-02-INMEDIA-紀錄片-野草不盡-說創傷與移民的香港故事.html
@@ -8,11 +8,12 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/grass.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>《野草不盡》攝影指導Stanley、導演黃靖凝（Crystal）</em></p>
+<img src="https://www.inmediahk.net/files/column_images/director%20.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><em>《野草不盡》導演黃靖凝（Crystal）</em></p>
 <p><font color="red">【獨媒報導】</font>反修例運動事隔近三年，香港的紀錄片工作者接連交出作品，將持續超過半年的示威和激烈衝突畫面，搬上世界各地的大銀幕。儘管無緣在港上畫，不少作品在國際影壇屢獲殊榮，引起關注和討論。</p>
 <p>由黃靖凝（Crystal）執導的《野草不盡》，則承接這一波社運紀錄片的餘溫，拍下2019年過後重現香港的移民潮。早在數年前已隨家人移民美國的她，開始拍攝是因為想透過別人的故事，解答自己的問題。如今帶著作品走訪各地影展，她覺得《野草》讓海外觀眾有了多一個角度去看2019年後的香港——一種創傷過後的狀態：「這種狀態我覺得海外觀眾未看過。接下來要講的香港故事，都是圍繞著這件事，後創傷的故事。」</p>
 <p>在她眼中，2019年是香港人沒辦法放下的一件事。運動過去了，但集體回憶仍在：「我們在過的是一個後2019時代。」</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3FC5r4NG0v" title="20221117 專訪《野草不盡》 攝影：鍾健華"><img src="https://live.staticflickr.com/65535/52528960009_331bb55cc8_c.jpg" width="800" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/82763kbL3E" title="20221117 專訪《野草不盡》 攝影：鍾健華"><img src="https://live.staticflickr.com/65535/52529217723_0f329d8ecf_b.jpg" alt="20221117 專訪《野草不盡》 攝影：鍾健華" /></a></p>
+<p><em>《野草不盡》攝影指導Stanley、導演黃靖凝（Crystal）</em></p>
 <p>＊＊＊＊＊＊＊＊＊</p>
 <p><strong>5年前移居美國  19年回港拍攝示威後思考去留</strong></p>
 <p>2017年，Crystal從中大新聞系畢業不足一年，就隨家人移居到美國。到達當地後，她一邊適應移民生活，一邊做拍攝相關的工作。2019年6月她回港，原本只打算逗留兩個月，但因反修例運動爆發，她開始為外媒拍片，並和《野草不盡》的攝影指導Stanley一同參與了一些紀錄片製作。</p>
