--- a/_posts/2022-12-02-INMEDIA-紀錄片-野草不盡-說創傷與移民的香港故事.html
+++ b/_posts/2022-12-02-INMEDIA-紀錄片-野草不盡-說創傷與移民的香港故事.html
@@ -26,7 +26,7 @@ author: 獨媒報導
 <p>最後，Crystal選擇了跟拍兩名移英港人，一位是大學生，一位是剛為人父的中年男子。由他們離港前執拾行李、和朋友道別，到抵達英國讀書、找工作等，《野草不盡》都紀錄了下來。作為一個沒移民經歷的拍攝者，Stanley好奇的是：這班人在想什麼？有必要走得這麼急嗎 ？但Crystal說移民是一件很私密（personal）的事，即使嘗試去問，當下也不會得到答案，只能透過觀察整個過程，去了解這是怎樣的一回事。</p>
 <p>不只一次，受訪者在鏡頭下說出種種對於離開和香港人身份的想法。離港之前，大學生回到校園找同學吃飯聊天，期間談起被捕的朋友，Crystal說在對話之中看到19年後年輕人的焦慮：「那是一段很自然地發生的對話，而它（對話）是有時代性。」</p>
 <p>另一邊箱，中年男子和朋友臨別聚會時，也很自然地由賣樓、工作等話題，談到離開是否等同放棄年輕人：「哇，原來香港人臨走前會談這些話題。」</p>
-<p>他們在前年8月開始拍攝，原本不打算跟著受訪者去英國，但發生上述對話後，Crtsyal改變了心意：「想拍他們剛離開後、仍帶著之前的情緒那種狀態。」她覺得《野草不盡》不是想講移民後的故事，而是講人們遊走在兩地之間、困在中間的狀態。</p>
+<p>他們在前年8月開始拍攝，原本不打算跟著受訪者去英國，但發生上述對話後，Crystal改變了心意：「想拍他們剛離開後、仍帶著之前的情緒那種狀態。」她覺得《野草不盡》不是想講移民後的故事，而是講人們遊走在兩地之間、困在中間的狀態。</p>
 <p>抵達英國後，Crystal也拍下中年男子和太太、朋友一邊飲酒，一邊回憶香港的事和香港人這個身分的一幕。「那是每個移民的香港人都無法避免的一幕」，Crystal說。在她眼中，移民會帶來很多問題，所以人們只能不斷去思考和談論這些事，但這些問題可能永遠無法解決。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/G6L1c64946" title="Grass_Still-04"><img src="https://live.staticflickr.com/65535/52514117979_6d9935245a_c.jpg" width="800" alt="Grass_Still-04" /></a><br /><em>《野草不盡》劇照</em></p>
 <p><strong>讓海外觀眾看見  創傷後的香港</strong></p>
