--- a/_posts/2022-12-03-INITIUM-当汉人解封-是否还会记得集中营的维吾尔人-一名汉族女性的自白.html
+++ b/_posts/2022-12-03-INITIUM-当汉人解封-是否还会记得集中营的维吾尔人-一名汉族女性的自白.html
@@ -9,7 +9,7 @@ author: November
 ---
 
 <p>「那一刻我感觉自己是一个身处白人集会高喊 Black Lives Matter 的白人，是一个身处男性集会高呼女权的男人。」</p><p>November</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221204-her-country-reflection-china-protest/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/94a2587766cb45d9a1d6459607705140.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月29日，洛杉矶，南加州大学校园里一名妇女为乌鲁木齐大火的受害者点燃蜡烛。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年11月29日，洛杉矶，南加州大学校园里一名妇女为乌鲁木齐大火的受害者点燃蜡烛。<span class="credit">摄：Wally Skalij/Los Angeles Times via Getty Images</span></figcaption></figure><p><small>“女人没有国家？”是端传媒新开设的专栏，名字源于伍尔芙的一句话“As a woman I have no country”，但我保留了一个问号，希望能从问号出发，与你探讨女性和国家的关系，聆听离散中的女性故事和女性经验。我是这个栏目的编辑符雨欣。这是“女人没有国家？”的第一篇，来自一名汉族女性，从最近的中国抗议声援活动中，反思汉族、女性在抗争中的位置。</small></p>
+            <figcaption itemprop="caption">2022年11月29日，洛杉矶，南加州大学校园里一名妇女为乌鲁木齐大火的受害者点燃蜡烛。<span class="credit">摄：Wally Skalij/Los Angeles Times via Getty Images</span></figcaption></figure><p><small><a href="https://theinitium.com/channel/her-country">“女人没有国家？”</a>是端传媒新开设的专栏，名字源于伍尔芙的一句话“As a woman I have no country”，但我们保留了一个问号，希望能从问号出发，与你探讨女性和国家的关系，聆听离散中的女性故事和女性经验。我是这个栏目的编辑符雨欣。这是“女人没有国家？”的第一篇，来自一名汉族女性，从最近的中国抗议声援活动中，反思汉族、女性在抗争中的位置。</small></p>
 <p>封控抗议潮期间，我在国外参加了一个悼念乌鲁木齐大火死难者的烛光晚会，结束后整个人却陷入在深深的愧疚和愤怒情绪中，因为在那个晚上，我无比深切感受到，作为一名汉人，我是一名中国白人。我当然明白在中国能有这样的抗议行为是非常不容易的、应该赞许和珍惜的，但我更认为，这场由乌鲁木齐大火点燃的、从上海街头蔓延到世界的抗议活动，在没有喊出 Free Uyghur 的口号前，即便喊一百遍习近平和共产党下台，也是不激进的，是没有团结可言的。</p>
 <h2>符号化的悼念会</h2>
 <p>我去的这场悼念会和我在网上看到的许多海外悼念会非常相似。都是以悼念乌鲁木齐大火遇难者为由表达对中国国内抗议运动的支持。来的人不少，大家带了蜡烛鲜花和白纸。在活动上，大家义愤填膺喊了四通桥口号，喊了独裁者下台的口号。然而在蜡烛、白纸、鲜花的包裹中，更多的是反封控反极权和要自由的标语，只有零星一两张遇难者的照片。</p>
