--- a/_posts/2022-12-04-INMEDIA-杜拜健力賽播-願榮光-主辦方致歉-稱志願者不諳香港國歌-無刪錯誤版本.html
+++ b/_posts/2022-12-04-INMEDIA-杜拜健力賽播-願榮光-主辦方致歉-稱志願者不諳香港國歌-無刪錯誤版本.html
@@ -17,6 +17,6 @@ author: 獨媒報導
 <p>信中表示，技術團隊事後已檢視國歌檔案，亞洲健力聯盟執委會及團隊將保證類似事件不再發生。</p>
 <p>翻查主辦方的YouTube頻道，相關影片已下架，女子組賽事僅得52及57公斤級別的比賽片段。</p>
 <p><strong>有組織罪案及三合會調查科正調查事件</strong></p>
-<p>警方則表示高度關注事件，有組織罪案及三合會調查科正作出調查。警方會就事件是否涉及串謀違反《國歌條例》或其他香港法律，依法嚴肅跟進。</p>
+<p>警方回覆《獨媒》查詢，表示高度關注事件，有組織罪案及三合會調查科正作出調查。警方會就事件是否涉及串謀違反《國歌條例》或其他香港法律，依法嚴肅跟進。</p>
 <p>特區政府昨午發聲明，對主辦機構錯播國歌表示反對和強烈不滿。對於運動員及領隊按照新指引即時要求中止典禮及更正，政府「肯定香港代表在當場維護國家尊嚴的表現」，又稱政府十分重視事件，已要求港協提交報告。</p>
 </div></div></div>
