Update VOCUS 2022-12-05 patch

--- a/_posts/2022-12-04-VOCUS-心想事成-原來是這樣啊.html
+++ b/_posts/2022-12-04-VOCUS-心想事成-原來是這樣啊.html
@@ -22,19 +22,22 @@ author: 泰太
 <div class="draft-block draft--p left">雖然之後有交換了LINE，但我也不是那種愛沒事打擾的人，一樣默默地閱讀、留言，每篇文必按愛心。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1548438294-1ad5d5f4f063?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDEzfHxkcmVhbXxlbnwwfHx8fDE2Njg5NjIyODM&amp;ixlib=rb-4.0.3&amp;q=80"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <h2 class="draft-block draft--h2" name="header-chdak">路程</h2>
-<blockquote class="draft-block draft--blockquote">2019年8月，我開始在方格子上寫文。<br>2020年7月，我開始做Podcast。</blockquote>
-<div class="draft-block draft--p left">忘記是在哪時候，大約是2021年的某一天....</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<h3 class="draft-block draft--h3" name="header-245s9">訂閱解鎖內容</h3>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<blockquote class="draft-block draft--blockquote">2019年8月，我開始在方格子上寫文。</blockquote>
+<blockquote class="draft-block draft--blockquote"><br>2020年7月，我開始做Podcast。</blockquote>
+<div class="draft-block draft--p left">忘記是在哪時候，大約是2021年的某一天，忽然收到一封LINE簡訊，是她！內容大約是：「在Podcast聽到我的聲音，想起以前在聚會上見過面，以及一些鼓勵的話語。」之後，也許是有了共同話題，就多了一些聯繫與談話。</div>
+<blockquote class="draft-block draft--blockquote">2022年4月，我終於有勇氣邀約來賓上Podcast節目，第一個想到的就是她。</blockquote>
+<blockquote class="draft-block draft--blockquote"><br>2022年9月，收到<a href="https://podcasts.apple.com/tw/podcast/%E9%98%BF%E5%B3%87%E5%8D%A1%E5%B7%B4-%E6%9D%B1%E5%8D%97%E4%BA%9E%E9%9B%BB%E5%8F%B0/id1523969104" target="_blank" class="draft--a">《阿峇卡巴東南亞電台》</a>以及<a href="https://www.thenewslens.com/" target="_blank" class="draft--a">《關鍵評論網》</a>的邀約。</blockquote>
+<blockquote class="draft-block draft--blockquote"><br>2022年10月，因為<a href="https://open.spotify.com/episode/4vRSpbMbMUgGC9FbTSoLbE?si=4a00b844f8284bef" target="_blank" class="draft--a">【Ep.36】</a>入圍海外華文媒體報導大獎而回到臺灣。</blockquote>
+<div class="draft-block draft--p left">再回臺灣的這段時間裡，獲得她的吃飯邀約，一起討論節目合作。那一天晚上飄著雨，在那一間氛圍佳的小酒館裡一起喝著調酒聊天，結束後散步在雨後微涼的台北街道，幸福感超滿的！(和老公約會都沒這樣，哈哈哈~</div>
+<h2 class="draft-block draft--h2" name="header-28lj5">回想</h2>
+<div class="draft-block draft--p left"><a href="https://vocus.cc/user/5a11f9c8eceaed97b401ee09" target="_blank" class="draft--a">油雞小姐</a>是方格子熱門作者，很喜歡她的文字，也曾厚臉皮地邀情她來上節目。最近看到油雞小姐在一篇在社團的發文內容，才使我驚覺，「啊，也曾有這種感覺呢！原來，我是心想事成了啊！」</div>
+<div class="draft-block draft--p left"><span style="font-weight: bold; ">曾經在關鍵評論網閱讀她的文字時，就覺得可以有自己的欄位好酷</span>，<span style="font-weight: bold; ">也好想要有一個。也曾在臉書粉專閱讀她的文字時，想說若能成為現實生活中的朋友有多好啊！</span></div>
+<div class="draft-block draft--p left"><span style="text-decoration: underline; ">登登！如今都實現了耶！</span></div>
+<div class="draft-block draft--p left">最近的我，較常回想過去的念頭與現在事件之間的連結，有時候覺得很有趣。也許當下看似毫無關聯，<span style="text-decoration: underline; ">但若是沒有 1 就無法走到 2，更不會橫空跑出 3。</span></div>
+<div class="draft-block draft--p left">如果我沒有開始寫方格子，<br>也沒有開始做Podcast，<br>這一切都不會發生，<br>我只是個在螢幕後按讚按愛心和留言的人。</div>
+<div class="draft-block draft--p left"><span style="font-weight: bold; ">好的念頭 + 正確行動 = 好事發生<br>念頭 + 行動 = 心想事成 </span></div>
+<div class="draft--imgNormal draft-block"><div><img src="https://images.unsplash.com/photo-1534196511436-921a4e99f297?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fGRyZWFtJTIwY29tZSUyMHRydWV8ZW58MHx8fHwxNjY4OTUxODc2&amp;ixlib=rb-4.0.3&amp;q=80"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft-block draft--p left">這篇是關於近期生活中的一些體悟，也順便預告以後的文章類型比較不會著重於泰國時事與新聞了，因為會在<a href="https://www.thenewslens.com/author/imthaitai" target="_blank" class="draft--a">這裡</a>出現 ▼</div>
 <div><h3><a href="https://www.thenewslens.com/author/imthaitai">泰太 - 最新文章 - The News Lens 關鍵評論網</a></h3><span>一不小心來泰國就待了九年的怪咖，目前在Podcast《泰太太想說》裡說話，脫離好熱好辣好便宜的泰國，想用真實生活與你聊一聊。 最新文章 相關標籤: 泰國, 東南亞, 槍枝, 擁槍率, 犯罪, 幼兒園, 泰緬邊境, 大其力, 美賽, 緬甸</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fimage1.thenewslens.com%2FAvatars%2F66321%2F3vligzhzyeka8fs1m5ysfcsfhk8iad.jpg%3Fauto%3Dcompress%26h%3D250%26q%3D80%26w%3D250&amp;width=550&amp;sign=We3QP_tuZ4ospAddeo_K_OQHncM_luk_tX0e4B8hppU"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Podcast </span><a href="https://open.firstory.me/user/taicountry/platforms" target="_blank" class="draft--a">泰太太想說</a><br><span style="font-weight: bold; ">Instargram </span><a href="https://www.instagram.com/taicountry/" target="_blank" class="draft--a">@taicountry</a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">底下拍拍手，輕鬆支持我 ↓</span></div>
-<div class="draft-block draft--p left"></div>
