--- a/_posts/2022-12-04-INITIUM-早报-伊朗抗议者呼吁罢工三天-道德警察解散-说法尚未证实.html
+++ b/_posts/2022-12-04-INITIUM-早报-伊朗抗议者呼吁罢工三天-道德警察解散-说法尚未证实.html
@@ -40,7 +40,7 @@ author:
 <p>欧盟委员会主席<a href="https://www.bbc.com/news/world-europe-63852394">冯德莱恩（Ursula von der Leyen）周日在比利时演讲表示</a>，欧盟必须解决美国4300亿美元鼓励气候友好技术的法案令欧洲企业处于竞争不利地位的问题，并调整欧盟自己的补贴规则。</p>
 <p>冯德莱恩强调公平竞争，并表示欧盟将会与美国合作，解决美国《减少通货膨胀法》（IRA）中令欧盟担忧的一些问题。她还提出欧盟必须调整自己的国家补贴规则，以刺激环保转型方面的公共投资。</p>
 <p>法国总统马克龙上周访问美国期间，也曾与美国总统拜登讨论该法案对欧洲企业造成的不利影响。拜登对马克龙承诺将作出“调整”。</p>
-<h3>台湾涉国家核心关键技术人员赴大陆将经许可</h3>
+<h3>台湾内政部：台湾涉国家核心关键技术人员赴大陆应经许可</h3>
 <p><a href="https://www.cna.com.tw/news/aipl/202212040097.aspx">中央社报导</a>，台湾内政部预告修改“台湾地区公务员及特定身份人员进入大陆地区许可办法”，增订涉及国家核心关键技术业务人员进入大陆地区应经许可。预告期至明年1月30日。</p>
 <p>内政部指，这项办法是依照今年6月8日修正公布的“两岸人民关系条例”订定，作为台湾地区公务员及特定身份人员进入大陆地区审查作业的依据。</p>
 <p>办法草案还增订，涉及国家核心关键技术业务的人员，需在大陆地区有设户籍的配偶或四亲等内的亲属，或是进入大陆地区从事与业务相关交流活动或会议、经所属机关遴派或同意出席专案活动或会议等，才可申请进入大陆地区。</p>
