--- a/_posts/2022-12-04-INMEDIA-訪三名內地來港生-我們是夾在兩地輿論中間的少數.html
+++ b/_posts/2022-12-04-INMEDIA-訪三名內地來港生-我們是夾在兩地輿論中間的少數.html
@@ -42,7 +42,7 @@ author: 獨媒報導
 <p>雖然香港上周連日有小型的聲援行動，網上相關的討論內容卻顯得兩極。不少網民重提2019年內地人對港人示威的反應、或指內地人只為上班、吃飯，並非真正「覺醒」。對於前者，小白是理解的：「我始終唔係香港人，我真係唔可以有咁親身嘅感覺到香港人失去咗幾多嘢。不管我自己有幾痛苦，都比唔上香港人嘅痛苦，佢哋經歷咗咁多事，同情唔到我都理解。」</p>
 <p>至於後者，在內地生活了18年的小白，亦理解大陸人沒有「醒覺」的原因：「我唔知可唔可以咁講，人民都係無辜嘅，因為大陸都好可憐，完全接觸唔到訊息，佢哋冇醒覺我都明，佢哋唔係選擇做一個好壞嘅人。」小白形容自己為「夾心餅乾」，為兩地輿論感到難過，「點解係人民互相傷害呢？」</p>
 <p>K和嶼同樣自覺「兩邊不討好」——一方面被港人和香港媒體理解為沒有真正反思的那種內地人，另一方面又會被內地示威者視為想法激進的「境外勢力」。曾有媒體找K訪問，請她回應對內地示威和港人反應的看法。但訪問刊出後，K覺得文中不少內容是記者對於「典型大陸學生」的想像，而不完全是她的想法。嶼補充：「其實內地人的光譜，不是那麼absolute的。」</p>
-<p>嶼覺得，當連自己的理解也未必與同學一致時，港人便更難意識到大陸人也有「稍微負責」的光譜。例如，有些人的抱怨對象只是學校或社區，爭取最基本的生活就能得到滿足，卻沒反思背後是一種生命控制；有些人明白「公民抗命」是甚麼、會喊「激進口號」，他們的認知就更深一層：「悼念可能有點像是保護傘，因為知道維吾爾族的事，就特別highlight『新疆』這個地方。」</p>
+<p>嶼覺得，當連自己的理解也未必與同學一致時，港人便更難意識到大陸人也有「稍微複雜」的光譜。例如，有些人的抱怨對象只是學校或社區，爭取最基本的生活就能得到滿足，卻沒反思背後是一種生命控制；有些人明白「公民抗命」是甚麼、會喊「激進口號」，他們的認知就更深一層：「悼念可能有點像是保護傘，因為知道維吾爾族的事，就特別highlight『新疆』這個地方。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/q7qWs8fPfR" title="IMG_4947"><img src="https://live.staticflickr.com/65535/52535883999_7b1de403f1_c.jpg" width="800" alt="IMG_4947" /></a><br /><em>來自南方城市的中大生嶼</em></p>
 <p>但K認為，後者只是少數。例如在上海，當有人叫出「激進口號」，會被其他示威者質疑是「阻礙我們正當的悼念」。除此之外，嶼提到也有一種在喊「為人民服務」的口號和唱國歌的人，是「雖然形式一樣，但理解完全唔同」。</p>
 <p>面對香港網民言論，K和小白一樣能理解港人的反應：「有啲係好真心嘅絕望，嗰種（留言）真係睇到好想喊。」嶼則不同意有網民說警方對港人和內地人有「區別對待」：「可能訊息方面做得較好，沒有在公開場合post（行動詳情），是一個傳一個，聽說有警車來時（人）就散了，才沒引起較大的風波。」</p>
