--- a/_posts/2022-12-06-INITIUM-废除道德警察-只是烟雾弹-伊朗当局仍在试图镇压抗争.html
+++ b/_posts/2022-12-06-INITIUM-废除道德警察-只是烟雾弹-伊朗当局仍在试图镇压抗争.html
@@ -5,10 +5,10 @@ date: 2022-12-06 04:46:00.000000000 +00:00
 link: https://theinitium.com/article/20221206-opinion-iran-moral-police/
 categories: initium
 tags: blog
-author: 
+author: 布犁
 ---
 
-<p>「至今为止，伊朗政权除了在口头上曾经释放一些似有似无的温和信号外，并无给出任何实质性的妥协。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221206-opinion-iran-moral-police/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/4a090b95cac74703a3b960b137f77f29.jpg?imageView2/1/w/1080/h/734/format/jpg" alt="2022年9月19日，伊朗首都德黑兰，民众在街头焚烧杂物示威，抗议库尔德族女生玛沙·阿米尼（Mahsa Amini）被道德警察逮捕、殴打后死亡。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「至今为止，伊朗政权除了在口头上曾经释放一些似有似无的温和信号外，并无给出任何实质性的妥协。」</p><p>布犁</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221206-opinion-iran-moral-police/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/4a090b95cac74703a3b960b137f77f29.jpg?imageView2/1/w/1080/h/734/format/jpg" alt="2022年9月19日，伊朗首都德黑兰，民众在街头焚烧杂物示威，抗议库尔德族女生玛沙·阿米尼（Mahsa Amini）被道德警察逮捕、殴打后死亡。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2022年9月19日，伊朗首都德黑兰，民众在街头焚烧杂物示威，抗议库尔德族女生玛沙·阿米尼（Mahsa Amini）被道德警察逮捕、殴打后死亡。<span class="credit">摄：Stringer/Anadolu Agency via Getty Images</span></figcaption></figure><p>上周日（12月4日），一则消息在英文互联网上广泛传播，随即也传入了中文互联网。这则最早来自法新社的消息称，伊朗总检察长蒙塔泽里（Mohammad Jafar Montazeri）近日表示将废除在街头检查妇女着装的道德警察。这则消息随后被包括BBC在内的各大媒体广泛转载。</p>
 <p>尽管对许多从事运动和抗争的人士而言，近三个月的伊朗街头抗议之后听到这则消息，确实有着格外鼓舞的效果——就连顽固不化的伊朗神权政府也对民众的抗争妥协了！然而，这则新闻实际上却更类似于一则“假消息”——伊朗当局试图用非常微弱的让步姿态来分化、消解抗争运动的势头。</p>
 <h2>大棒加胡萝卜屑</h2>
