--- a/_posts/2022-12-05-PQ-邱國禎-台灣人在戰爭中的悲運-上-台灣人日本兵權益遭國民黨出賣.html
+++ b/_posts/2022-12-05-PQ-邱國禎-台灣人在戰爭中的悲運-上-台灣人日本兵權益遭國民黨出賣.html
@@ -26,7 +26,7 @@ author: 邱 國禎
 
 
 
-<p>日本政府雖然在盧溝橋事變後曾頒布《陸軍特別志願兵令》，但並未在台灣實施，直到珍珠港事變之前，日本內閣才在一九四一年（昭和十六年）六月正式通過台灣將在隔年實施特別志願兵制度，一九四二年三月將選拔的五百名「高砂挺身報國隊」（後來改名為「髙砂義勇隊」），送往呂宋島；一九四三年八月又施行「海軍特別志願兵制度」。</p>
+<p>日本政府雖然在盧溝橋事變後曾頒布《陸軍特別志願兵令》，但並未在台灣實施，直到珍珠港事變之前，日本內閣才在一九四一年（昭和十六年）六月正式通過台灣將在隔年實施特別志願兵制度，一九四二年三月將選拔的五百名「高砂挺身報國隊」（後來改名為「髙砂義勇隊」），以軍屬身分送往呂宋島；一九四三年八月又施行「海軍特別志願兵制度」。</p>
 
 
 
@@ -147,6 +147,14 @@ author: 邱 國禎
 
 
 <p class="pqpoint">日本政府最終的處理定案後，日本國內的聲援團體「功成身退」，但要求合理賠償及維護尊嚴的行動並沒有停止，在台灣國內仍有許昭榮領導的〈全國原台籍老兵暨遺族協會〉繼續奮力訴求，另有部分台灣人元日本兵在人權律師及〈社團法人自由人權協會〉協助下，向聯合國人權事務委員會控訴日本政府。近年更有年邁的台灣人元日本兵向日本法院訴訟爭取「日本人身分」國籍。惟隨著索賠問題塵埃落定及台灣人元日本兵逐漸凋零，許昭榮開始致力於對台灣人元日本兵的關懷，以及喚醒台灣人歷史記憶的推動，後來繼承許昭榮遺志所成立的〈關懷台籍老兵文化協會〉，也肩負起追趕歷史列車的口述記錄和台灣戰爭史的學術研討。</p>
+
+
+
+<p></p>
+
+
+
+<p></p>
 
 
 
