--- a/_posts/2022-12-05-PQ-中國稱美印邊境演習違反協議精神-印外交部-中國須反省自己的違規行為.html
+++ b/_posts/2022-12-05-PQ-中國稱美印邊境演習違反協議精神-印外交部-中國須反省自己的違規行為.html
@@ -16,7 +16,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/2c361bf9-1000w_q75.jpg" alt="" class="wp-image-122061" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/2c361bf9-1000w_q75.jpg 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/2c361bf9-1000w_q75-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/2c361bf9-1000w_q75-768x512.jpg 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>在印度北阿坎德省奧利（Auli）一帶進行的演習是美印第 18 屆聯合演習「戰爭準備」（Yudh Abhyas）<br>圖／Photo by Benjamin Wilson,11th Airborne Division, DoD</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/2c361bf9-1000w_q75.jpg" alt="" class="wp-image-122061" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/2c361bf9-1000w_q75.jpg 1000w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/2c361bf9-1000w_q75-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/2c361bf9-1000w_q75-768x512.jpg 768w" sizes="(max-width: 1000px) 100vw, 1000px" /><figcaption>在印度北阿坎德省奧利（Auli）一帶進行的演習是美印第 18 屆聯合演習「戰爭準備」（Yudh Abhyas）<br>圖／Photo by Benjamin Wilson,11th Airborne Division, DoD</figcaption></figure></div>
 
 
 
